--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="title_activity_movie">MovieActivity</string>
     <string name="title_activity_remainder">RemainderActivity</string>
     <string name="title_activity_to_do">ToDoActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_defualt_app">Choose Default App</string>
+    <string name="Notepad">Notepad</string>
+    <string name="Todolist">Todo List</string>
+    <string name="drawing">Drawing</string>
+    <string name="reminder">Reminder</string>
+    <string name="movielist">Movie List</string>
 </resources>
