--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="choose_defualt_app">Choose Default App</string>
     <string name="Notepad">Notepad</string>
-    <string name="Todolist">Todo List</string>
+    <string name="Todolist">Todo -=List</string>
     <string name="drawing">Drawing</string>
     <string name="reminder">Reminder</string>
     <string name="movielist">Movie List</string>
