--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="note_updated">note_updated</string>
     <string name="Titleisrequired">Title is required</string>
     <string name="Contentisrequired">Content is required</string>
+    <string name="NotesList">Notes List</string>
+    <string name="Settings">Settings</string>
 </resources>
