implementing  the to do listener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="Contentisrequired">Content is required</string>
     <string name="NotesList">Notes List</string>
     <string name="Settings">Settings</string>
+    <string name="date">Date</string>
+    <string name="title">TITLE</string>
+
 </resources>
